--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,11 +6,7 @@
   <title>CalenBooker</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="text-center">
-    <h1 class="text-4xl font-bold text-blue-600 mb-4">CalenBooker</h1>
-    <p class="text-lg text-gray-700">Coming Soon</p>
-  </div>
-  <div id="root" class="hidden"></div>
+<body>
+  <div id="root"></div>
 </body>
 </html>
